welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:23: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:29: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:39: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:49: error: Unit does not take parameters
		dogHouse();		
                        ^